Fixed task viewer layout issues

--- a/src/styles/_sideBar.scss
+++ b/src/styles/_sideBar.scss
@@ -10,6 +10,8 @@
     .home-title,
     .projects-title {
         border-bottom: 2px solid $font-color;
+        font-weight: 700;
+        font-style: italic;
         margin: 10px 0;
     }
 
